reuse as to justify existence in java.io.

Commons IO contains utility classes, stream implementations, file filters, 
and endian transformation classes.


Compatibility with 1.2
----------------------
Binary compatible - Yes

Source compatible - Yes

Semantic compatible - Yes


Deprecations from 1.2
---------------------
- WildcardFilter deprecated, replaced by WildcardFileFilter
  - old class only accepted files, thus had a confusing dual purpose


Bug fixes from 1.2
------------------
- LineIterator now implements Iterator
  (It was always supposed to...)


Enhancements from 1.2
---------------------
- IOCase
  - New class/enumeration for case-sensitivity control

- FilenameUtils
  - New methods to handle case-sensitivity
  - wildcardMatch - new method that has IOCase as a parameter
  - equals - new method that has IOCase as a parameter

- WildcardFileFilter
  - Replacement for WildcardFilter
  - Accepts both files and directories
  - Ability to control case-sensitivity

- NameFileFilter
  - Ability to control case-sensitivity

- FileFileFilter
  - New IOFileFilter implementation
  - Accepts files where File.isFile() is true
  - In other words it filters out directories

- CanReadFileFilter
  - New IOFileFilter implementation
  - Accepts files where File.canRead() is true

- CanWriteFileFilter
  - New IOFileFilter implementation
  - Accepts files where File.canWrite() is true

- HiddenFileFilter
  - New IOFileFilter implementation
  - Accepts files where File.isHidden() is true

- EmptyFileFilter
  - New IOFileFilter implementation
  - Accepts files or directories that are empty


Feedback
--------
Open source works best when you give feedback:
http://jakarta.apache.org/commons/io/

Please direct all bug reports to Bugzilla (prefix bug reports by [io])
http://issues.apache.org/bugzilla/buglist.cgi?product=Commons&component=IO

Or subscribe to the commons-user mailing list (prefix emails by [io])
http://jakarta.apache.org/site/mail.html

The Commons-IO Team